refactor: Alterando o CourseController para alinhar com o contrato do postman
